<resources>
    <string name="app_name">MobileClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_1">Women</string>
    <string name="nav_item_2">Men</string>
    <string name="nav_item_3">Kids</string>
    <string name="nav_item_4">Accessories</string>
    <string name="nav_item_5">Life Style</string>
    <string name="nav_sub_menu">Others</string>
    <string name="nav_sub_menu_item01">Home ware</string>
    <string name="nav_sub_menu_item02">Foods</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string-array name="planets_array">
        <item>men</item>
        <item>women</item>
        <item>kids</item>
        <item>accessories</item>
        <item>life_style</item>
    </string-array>
</resources>
