<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_women"
            android:checked="true"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_item_1" />
        <item
            android:id="@+id/navigation_men"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_item_2" />
        <item
            android:id="@+id/navigation_kids"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_item_3" />
        <item
            android:id="@+id/navigation_accessories"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_item_4" />
        <item
            android:id="@+id/navigation_life"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_item_5" />
    </group>

</menu>